testfx/errors/error_tests/edge_08_while_keyword.fx
// 测试: 使用 while 关键字
x := 0
while (x < 10) {
    println(x)
    x = x + 1
}
